feat: Upgrade Spring Boot to 3.5.14. Upgrade related dependencies too (#103)
* feat: Upgrade to Spring Boot 3.3.13: Changes made by org.openrewrite.maven:rewrite-maven-plugin (recipe: org.openrewrite.java.spring.boot3.UpgradeSpringBoot_3_3) and verified. Dependencies management is improved. 

* fix(deps): Logging dependencies conflict is resolved: slf4j.version is set to 2.0.17, exclusions of some transitive slf4j dependencies are added. Also: Bump versions: guava to 32.0.1-jre, gson to 2.10.1, openapi-generator and openapi-generator-maven-plugin to 7.9.0.

* fix: openapi-generator-maven-plugin configuration is optimized, properties for Spring Boot 3.3 are added.

* fix: Usage of obsolete LiquibaseProperties#getLabels method is removed. Also: StringUtils usage is unified to use commons-lang3 only.

* fix: TestAppConfiguration is rewritten to use httpclient5.

* fix(deps): Bump au.com.dius.pact.provider:junit5, au.com.dius.pact.provider:junit5spring and au.com.dius.pact.consumer:junit5 dependencies versions to 4.6.15.

* fix: Liquibase scripts resource loading is rewritten (to use classloading instead of OS file loading). Bump liquibase version to 4.23.2.

* fix: Pact-tests (consumer-side) are fixed. 

* fix(deps): Bump dependencies versions: jackson to 2.18.6, httpclient5 to 5.4.4, httpcore5 to 5.3.4, micrometer-tracing to 1.4.3, spring-kafka to 3.3.3, io.zipkin.brave:brave to 6.0.3. 

* build: org.openclover:clover-maven-plugin:4.2.0 plugin is removed.

* fix: SPRING_PROFILES environment property is replaced to ACTIVE_PROFILES_SPRING.

* fix(security): Bump kafka-clients to 3.9.2, tomcat-embed to 10.1.54.

* fix: Mongo auto configurations are excluded from main SpringBootApplication.

* feat: Bump logback to 1.5.32, micrometer-tracing to 1.5.10, reactor-bom to 2024.0.17, netty to 4.1.132.Final, javassist to 3.28.0-GA, gson to 2.13.2. Also: junit:junit dependency is excluded.

* fix: Processing of SpringLiquibase#contexts is fixed according to modern API changes.

*