@@ -1,5 +1,5 @@
 /*
- * # Copyright 2024-2025 NetCracker Technology Corporation
+ * # Copyright 2024-2026 NetCracker Technology Corporation
  * #
  * # Licensed under the Apache License, Version 2.0 (the "License");
  * # you may not use this file except in compliance with the License.
@@ -23,7 +23,6 @@ import java.util.Collections;
 import java.util.List;
 
 import org.junit.jupiter.api.Test;
-import org.junit.jupiter.api.extension.ExtendWith;
 import org.junit.jupiter.api.parallel.Isolated;
 import org.mockito.Mockito;
 import org.qubership.atp.environments.Main;
@@ -33,16 +32,14 @@ import org.qubership.atp.environments.service.direct.DatabaseDirectoryService;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.web.servlet.AutoConfigureMockMvc;
 import org.springframework.boot.test.context.SpringBootTest;
-import org.springframework.boot.test.mock.mockito.MockBean;
 import org.springframework.http.MediaType;
 import org.springframework.test.context.ContextConfiguration;
 import org.springframework.test.context.TestPropertySource;
-import org.springframework.test.context.junit.jupiter.SpringExtension;
+import org.springframework.test.context.bean.override.mockito.MockitoBean;
 import org.springframework.test.web.servlet.MockMvc;
 import org.springframework.test.web.servlet.request.MockMvcRequestBuilders;
 import org.springframework.test.web.servlet.result.MockMvcResultMatchers;
 
-@ExtendWith(SpringExtension.class)
 @SpringBootTest()
 @AutoConfigureMockMvc(addFilters = false)
 @ContextConfiguration(classes = Main.class)
@@ -51,7 +48,7 @@ import org.springframework.test.web.servlet.result.MockMvcResultMatchers;
 public class DatabaseDirectoryControllerTest {
     @Autowired
     private MockMvc mockMvc;
-    @MockBean
+    @MockitoBean
     private DatabaseDirectoryService databaseDirectoryService;
 
     List<DatabaseDirectory> directoryList = Collections.singletonList(new DatabaseDirectoryImpl("oracle", "jdbc:oracle:thin:@host"
@@ -60,7 +57,7 @@ public class DatabaseDirectoryControllerTest {
 
     @Test
     public void onDatabaseDirectoryController_GetDirectory_Directory() throws Exception {
-        Mockito.when(databaseDirectoryService.getName(eq("oracle"))).thenReturn(directoryList.get(0));
+        Mockito.when(databaseDirectoryService.getName(eq("oracle"))).thenReturn(directoryList.getFirst());
         this.mockMvc.perform(MockMvcRequestBuilders.
                 get("/api/database-directory/oracle")
                 .accept(MediaType.APPLICATION_JSON))
