@@ -1,5 +1,5 @@
 /*
- * # Copyright 2024-2025 NetCracker Technology Corporation
+ * # Copyright 2024-2026 NetCracker Technology Corporation
  * #
  * # Licensed under the Apache License, Version 2.0 (the "License");
  * # you may not use this file except in compliance with the License.
@@ -28,7 +28,6 @@ import java.util.UUID;
 
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
-import org.junit.jupiter.api.extension.ExtendWith;
 import org.junit.jupiter.api.parallel.Isolated;
 import org.qubership.atp.environments.Main;
 import org.qubership.atp.environments.model.UpdateEvent;
@@ -38,17 +37,15 @@ import org.qubership.atp.environments.utils.TestEntityUtils;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.web.servlet.AutoConfigureMockMvc;
 import org.springframework.boot.test.context.SpringBootTest;
-import org.springframework.boot.test.mock.mockito.MockBean;
 import org.springframework.http.MediaType;
 import org.springframework.test.context.ContextConfiguration;
 import org.springframework.test.context.TestPropertySource;
-import org.springframework.test.context.junit.jupiter.SpringExtension;
+import org.springframework.test.context.bean.override.mockito.MockitoBean;
 import org.springframework.test.web.servlet.MockMvc;
 import org.springframework.test.web.servlet.request.MockMvcRequestBuilders;
 
 import com.fasterxml.jackson.databind.ObjectMapper;
 
-@ExtendWith(SpringExtension.class)
 @SpringBootTest()
 @AutoConfigureMockMvc(addFilters = false)
 @ContextConfiguration(classes = Main.class)
@@ -58,7 +55,7 @@ public class UpdateEventControllerTest {
 
     @Autowired
     private MockMvc mockMvc;
-    @MockBean
+    @MockitoBean
     private UpdateEventService updateEventService;
 
     private List<UpdateEvent> updateEventList;
@@ -72,20 +69,20 @@ public class UpdateEventControllerTest {
 
     @Test
     public void getEventByEntityIdAndSubscriptionId_PassedRequest_GoodRequest() throws Exception {
-        when(updateEventService.get(any(UUID.class), any(UUID.class))).thenReturn(updateEventList.get(0));
+        when(updateEventService.get(any(UUID.class), any(UUID.class))).thenReturn(updateEventList.getFirst());
         mockMvcPerformGet("$", "/api/updateEvents/subscription/" + UUID.randomUUID() + "/entity/"
                 + UUID.randomUUID());
     }
 
     @Test
     public void getEventBySubscriptionId_PassedRequest_GoodRequest() throws Exception {
-        when(updateEventService.getSubscriptionUpdateEvents(any(UUID.class))).thenReturn(updateEventList.get(0));
+        when(updateEventService.getSubscriptionUpdateEvents(any(UUID.class))).thenReturn(updateEventList.getFirst());
         mockMvcPerformGet("$", "/api/updateEvents/subscription/" + UUID.randomUUID());
     }
 
     @Test
     public void getEventByEntityId_PassedRequest_GoodRequest() throws Exception {
-        when(updateEventService.getEntityUpdateEvents(any(UUID.class))).thenReturn(updateEventList.get(0));
+        when(updateEventService.getEntityUpdateEvents(any(UUID.class))).thenReturn(updateEventList.getFirst());
         mockMvcPerformGet("$", "/api/updateEvents/entity/" + UUID.randomUUID());
     }
 
@@ -94,9 +91,9 @@ public class UpdateEventControllerTest {
                 .andExpect(status().isOk())
                 .andExpect(jsonPath(jsonPath).exists())
                 .andExpect(jsonPath(jsonPath + ".entityId").value(
-                        updateEventList.get(0).getEntityId().toString().trim()))
+                        updateEventList.getFirst().getEntityId().toString().trim()))
                 .andExpect(jsonPath(jsonPath + ".subscription.id").value(
-                        updateEventList.get(0).getSubscriptionId().toString().trim()));
+                        updateEventList.getFirst().getSubscriptionId().toString().trim()));
     }
 
     @Test
@@ -108,11 +105,11 @@ public class UpdateEventControllerTest {
     @Test
     public void createEvent_PassedRequest_GoodRequest() throws Exception {
         when(updateEventService.create(any(UUID.class), any(UUID.class),
-                anyString(), anyInt(), anyString())).thenReturn(updateEventList.get(0));
-        ((UpdateEventImpl)updateEventList.get(0)).setSubscription(null);
+                anyString(), anyInt(), anyString())).thenReturn(updateEventList.getFirst());
+        ((UpdateEventImpl)updateEventList.getFirst()).setSubscription(null);
         mockMvc.perform(MockMvcRequestBuilders.
                 post("/api/updateEvents")
-                .content(objectMapper.writeValueAsString(updateEventList.get(0)))
+                .content(objectMapper.writeValueAsString(updateEventList.getFirst()))
                 .characterEncoding("utf-8")
                 .contentType(MediaType.APPLICATION_JSON)
                 .accept(MediaType.APPLICATION_JSON))
@@ -121,10 +118,10 @@ public class UpdateEventControllerTest {
 
     @Test
     public void updateEvent_PassedRequest_GoodRequest() throws Exception {
-        ((UpdateEventImpl)updateEventList.get(0)).setSubscription(null);
+        ((UpdateEventImpl)updateEventList.getFirst()).setSubscription(null);
         mockMvc.perform(MockMvcRequestBuilders.
                 put("/api/updateEvents/subscription/" + UUID.randomUUID() + "/entity/" + UUID.randomUUID())
-                .content(objectMapper.writeValueAsString(updateEventList.get(0)))
+                .content(objectMapper.writeValueAsString(updateEventList.getFirst()))
                 .characterEncoding("utf-8")
                 .contentType(MediaType.APPLICATION_JSON)
                 .accept(MediaType.APPLICATION_JSON))
